Add support for Ruby format strings.
* gettext-tools/src/message.h (enum format_type): Add format_ruby.
* gettext-tools/src/message.c (format_language, format_language_pretty): Add an
entry for format_ruby.
(NFORMATS): Increment.
* gettext-tools/src/format.h (formatstring_ruby): New declaration.
* gettext-tools/src/format.c (formatstring_parsers): Add an entry for
format_ruby.
* gettext-tools/src/format-ruby.c: New file, based on
gettext-tools/src/format-python.c.
* gettext-tools/src/FILES: Mention it.
* gettext-tools/src/Makefile.am (FORMAT_SOURCE): Add format-ruby.c.
* gettext-tools/doc/gettext.texi (PO Files): Mention ruby-format.
(ruby-format): New section.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -1,5 +1,5 @@
 ## Makefile for the gettext-tools/src subdirectory of GNU gettext
-## Copyright (C) 1995-1998, 2000-2019 Free Software Foundation, Inc.
+## Copyright (C) 1995-1998, 2000-2020 Free Software Foundation, Inc.
 ##
 ## This program is free software: you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -138,6 +138,7 @@ FORMAT_SOURCE += \
   format-perl.c \
   format-perl-brace.c \
   format-php.c \
+  format-ruby.c \
   format-gcc-internal.c \
   format-gfc-internal.c \
   format-qt.c \
