--- a/.gitignore
+++ b/.gitignore
@@ -709,6 +709,8 @@ autom4te.cache/
 /gettext-tools/tests/intl-4-prg.exe
 /gettext-tools/tests/intl-5-prg
 /gettext-tools/tests/intl-5-prg.exe
+/gettext-tools/tests/intl-6-prg
+/gettext-tools/tests/intl-6-prg.exe
 /gettext-tools/tests/intl-setlocale-1-prg
 /gettext-tools/tests/intl-setlocale-1-prg.exe
 /gettext-tools/tests/intl-setlocale-2-prg
