build: Fix link error in tests (regression from 2020-04-26).
Reported and fix by Akim Demaille <akim.demaille@gmail.com>.

* gettext-tools/libgettextpo/Makefile.am (libgettextpo_la_AUXSOURCES): Add
format-ruby.c.

--- a/gettext-tools/libgettextpo/Makefile.am
+++ b/gettext-tools/libgettextpo/Makefile.am
@@ -83,6 +83,7 @@ libgettextpo_la_AUXSOURCES = \
   ../src/format-perl.c \
   ../src/format-perl-brace.c \
   ../src/format-php.c \
+  ../src/format-ruby.c \
   ../src/format-gcc-internal.c \
   ../src/format-gfc-internal.c \
   ../src/format-qt.c \
