build: Fix a build failure with bison < 3.0 when cldr-plural.y is modified.
* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC): Add bison.
* gettext-tools/configure.ac: Don't invoke AC_PROG_YACC. Instead, invoke
gl_PROG_BISON, set YACC, and invoke gl_BISON.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -31,7 +31,6 @@ test "$docdir" != '${datarootdir}/doc/${PACKAGE_TARNAME}' || docdir='${datarootd
 dnl Checks for programs.
 AC_PROG_CC
 AC_PROG_INSTALL
-AC_PROG_YACC
 
 gt_JAVA_CHOICE
 
@@ -161,6 +160,10 @@ fi
 AM_CONDITIONAL([USE_INSTALLED_CSHARP_DLL],
   [test "$gt_use_installed_csharp_dll" != no])
 
+dnl Check for bison and set YACC. (cldr-plural.y requires bison >= 3.0.)
+gl_PROG_BISON([TOOLS_BISON], [3.0], [1.* | 2.*])
+: ${YACC="${TOOLS_BISON} -o y.tab.c"}
+gl_BISON
 dnl This line internationalizes the bison generated parsers.
 BISON_I18N
 
