build: Fix VPATH build failures with old bison when the *.y files are modified.
* gettext-runtime/intl/Makefile.am (BISON): New variable.
(YACC): Use it.
(plural.c): Don't do the post-processing if a suitable version of bison was not
found.
* gettext-tools/src/Makefile.am (BISON): New variable.
(po-gram-gen.c, cldr-plural.c): Don't do the post-processing if a suitable
version of bison was not found.

--- a/gettext-runtime/intl/Makefile.am
+++ b/gettext-runtime/intl/Makefile.am
@@ -69,7 +69,8 @@ AM_CPPFLAGS += \
   -Drelocate2=libintl_relocate2 \
   -DDEPENDS_ON_LIBICONV=1
 
-YACC = @INTLBISON@ -d
+BISON = @INTLBISON@
+YACC = $(BISON) -d
 BISONFLAGS = --name-prefix=__gettext
 
 # Tell the ELF linker which symbols to export.
@@ -322,9 +323,11 @@ MOSTLYCLEANFILES += localename-table.h
 
 $(srcdir)/plural.c: $(srcdir)/plural.y
 	$(AM_V_YACC)$(YACC) $(BISONFLAGS) --output plural.c $(srcdir)/plural.y \
-	&& sed -e 's|".*/plural.y"|"plural.y"|' < plural.c > plural.c-tmp \
-	&& rm -f plural.c plural.h \
-	&& mv plural.c-tmp $(srcdir)/plural.c
+	&& test ':' = '$(BISON)' || { \
+	  sed -e 's|".*/plural.y"|"plural.y"|' < plural.c > plural.c-tmp \
+	  && rm -f plural.c plural.h \
+	  && mv plural.c-tmp $(srcdir)/plural.c; \
+	}
 # Don't put plural.c into BUILT_SOURCES. Since plural.c is in the source
 # directory, 'make' does not find it without a VPATH variable.
 MOSTLYCLEANFILES     += plural.c-tmp
