Update after gnulib changed.
* gettext-runtime/m4/intl.m4 (gt_INTL_SUBDIR_CORE): Remove redundant argument to
gl_PROG_BISON.
* gettext-tools/configure.ac: Likewise.

--- a/gettext-tools/configure.ac
+++ b/gettext-tools/configure.ac
@@ -161,7 +161,7 @@ AM_CONDITIONAL([USE_INSTALLED_CSHARP_DLL],
   [test "$gt_use_installed_csharp_dll" != no])
 
 dnl Check for bison and set YACC. (cldr-plural.y requires bison >= 3.0.)
-gl_PROG_BISON([TOOLS_BISON], [3.0], [1.* | 2.*])
+gl_PROG_BISON([TOOLS_BISON], [3.0])
 : ${YACC="${TOOLS_BISON} -o y.tab.c"}
 gl_BISON
 dnl This line internationalizes the bison generated parsers.
