Reduce explicit use of __attribute__.
* gnulib-local/lib/xalloc.h: Include noreturn.h.
(xalloc_die): Use _GL_NORETURN_FUNC.
* gnulib-local/modules/xalloc (Depends-on): Add noreturn.

--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,7 @@
 /gettext-tools/libgettextpo/msvc-inval.h
 /gettext-tools/libgettextpo/msvc-nothrow.c
 /gettext-tools/libgettextpo/msvc-nothrow.h
+/gettext-tools/libgettextpo/noreturn.h
 /gettext-tools/libgettextpo/obstack.c
 /gettext-tools/libgettextpo/obstack.h
 /gettext-tools/libgettextpo/open.c
