msgunfmt: Detect more cases of invalid .mo files.
* gettext-tools/src/read-mo.c: Include hash-string.h.
(read_mo_file): Verify the array of messages and the hash table.
* gettext-tools/src/write-mo.c (write_table): Fix typo in comment.
* gettext-tools/src/Makefile.am (msgunfmt_SOURCES): Add hash-string.c.
* gettext-tools/tests/overflow-7.mo: Renamed from
gettext-tools/tests/sysdep-without-nul.mo.
* gettext-tools/tests/sysdep-without-nul.mo: New file.
* gettext-tools/tests/msgunfmt-3: Test also overflow-7.mo.
* gettext-tools/tests/Makefile.am (EXTRA_DIST): Add overflow-7.mo.

--- a/gettext-tools/src/Makefile.am
+++ b/gettext-tools/src/Makefile.am
@@ -199,7 +199,8 @@ endif
 msgmerge_SOURCES += msgl-fsearch.c lang-table.c plural-count.c
 msgunfmt_SOURCES = msgunfmt.c
 msgunfmt_SOURCES += \
-  read-mo.c read-java.c read-csharp.c read-resources.c read-tcl.c
+  read-mo.c read-java.c read-csharp.c read-resources.c read-tcl.c \
+  ../../gettext-runtime/intl/hash-string.c
 if !WOE32DLL
 xgettext_SOURCES = xgettext.c
 else
