Avoid a module name and include file name collision with gnulib.
* gnulib-local/lib/mem-hash-map.h: Renamed from gnulib-local/lib/hash.h.
* gnulib-local/lib/mem-hash-map.c: Renamed from gnulib-local/lib/hash.c.
Include mem-hash-map.h instead of hash.h.
* gnulib-local/modules/mem-hash-map: Renamed from gnulib-local/modules/hash.
Update.
* gnulib-local/Makefile.am (EXTRA_DIST): Update.
* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC, GNULIB_MODULES_LIBGETTEXTPO):
Update.
* libtextstyle/gnulib-local/modules/term-styled-ostream (Depends-on): Likewise.
* gettext-tools/src/its.c: Include mem-hash-map.h instead of hash.h.
* gettext-tools/src/locating-rule.c: Likewise.
* gettext-tools/src/message.c: Likewise.
* gettext-tools/src/message.h: Likewise.
* gettext-tools/src/read-desktop.h: Likewise.
* gettext-tools/src/write-mo.c: Likewise.
* gettext-tools/src/write-qt.c: Likewise.
* gettext-tools/src/x-c.c: Likewise.
* gettext-tools/src/x-csharp.c: Likewise.
* gettext-tools/src/x-desktop.c: Likewise.
* gettext-tools/src/x-elisp.c: Likewise.
* gettext-tools/src/x-java.c: Likewise.
* gettext-tools/src/x-librep.c: Likewise.
* gettext-tools/src/x-lisp.c: Likewise.
* gettext-tools/src/x-scheme.c: Likewise.
* gettext-tools/src/x-sh.c: Likewise.
* gettext-tools/src/x-tcl.c: Likewise.
* gettext-tools/src/x-vala.c: Likewise.
* gettext-tools/src/xg-arglist-callshape.h: Likewise.
* gettext-tools/src/xg-arglist-context.h: Likewise.
* libtextstyle/gnulib-local/lib/term-styled-ostream.oo.c: Likewise.

--- a/gnulib-local/Makefile.am
+++ b/gnulib-local/Makefile.am
@@ -38,8 +38,6 @@ lib/getopt-core.h.diff \
 lib/gettext.h \
 lib/gl_array_list.h.diff \
 lib/gl_linkedhash_list.h.diff \
-lib/hash.c \
-lib/hash.h \
 lib/libxml/buf.c \
 lib/libxml/buf.h \
 lib/libxml/c14n.c \
@@ -142,6 +140,8 @@ lib/libxml/xpointer.c \
 lib/libxml/xpointer.in.h \
 lib/markup.c \
 lib/markup.h \
+lib/mem-hash-map.c \
+lib/mem-hash-map.h \
 lib/obstack.h.diff \
 lib/progname.h.diff \
 lib/regex_internal.h.diff \
@@ -163,11 +163,11 @@ modules/closeout \
 modules/error-progname \
 modules/gettext-runtime-misc \
 modules/gettext-tools-misc \
-modules/hash \
 modules/java \
 modules/libtextstyle-dummy \
 modules/libxml \
 modules/markup \
+modules/mem-hash-map \
 modules/xalloc \
 modules/xalloc-die \
 modules/xerror \
