Update after gnulib changed.
* gnulib-local/lib/clean-temp.c.diff: Remove file.
* gnulib-local/Makefile.am (EXTRA_DIST): Remove it.
* gettext-tools/src/write-csharp.c (msgdomain_write_csharp): Update fopen_temp
invocation.
* gettext-tools/src/write-java.c (msgdomain_write_java): Likewise.

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,7 @@
 /gettext-tools/libgettextpo/asprintf.c
 /gettext-tools/libgettextpo/attribute.h
 /gettext-tools/libgettextpo/basename-lgpl.c
+/gettext-tools/libgettextpo/basename-lgpl.h
 /gettext-tools/libgettextpo/basename.c
 /gettext-tools/libgettextpo/basename.h
 /gettext-tools/libgettextpo/c-ctype.c
